--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
 
-    implementation 'androidx.compose.foundation:foundation-layout:1.2.1'
+    def nav_version = "2.5.1"
+    implementation "androidx.navigation:navigation-compose:$nav_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
