--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.nejer.freyja"
@@ -68,6 +68,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     implementation "androidx.compose.runtime:runtime-livedata:1.2.1"
+    implementation 'com.google.accompanist:accompanist-systemuicontroller:0.26.1-alpha'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
